Fixed PanelUI missing/broken images on Firefox 51.

--- a/FirefoxEdgeLight.css
+++ b/FirefoxEdgeLight.css
@@ -2028,7 +2028,7 @@
     #mainPopupSet toolbaritem[sdkstylewidget="true"] > toolbarbutton,
     #mainPopupSet :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #webide-button, #containers-panelmenu)[cui-areatype="menu-panel"],
     #mainPopupSet toolbarpaletteitem[place="palette"] > :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #webide-button, #containers-panelmenu) {
-      list-style-image: var(--menupanel-images-2x);
+      list-style-image: var(--menupanel-images);
     }
     
     #mainPopupSet #PanelUI-help[panel-multiview-anchor="true"]::after,
@@ -2044,7 +2044,7 @@
     #mainPopupSet #zoom-controls:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true]) > toolbarbutton,
     #mainPopupSet toolbarpaletteitem[place="palette"] > #edit-controls > toolbarbutton,
     #mainPopupSet toolbarpaletteitem[place="palette"] > #zoom-controls > toolbarbutton {
-      list-style-image: var(--menupanel-small-images-2x);
+      list-style-image: var(--menupanel-small-images);
     }
     
     #mainPopupSet #pocket-button[cui-areatype="menu-panel"],
@@ -2166,12 +2166,10 @@
     --pocket-button-image: url(chrome://pocket/skin/Toolbar.png);
     --pocket-button-image2x: url(chrome://pocket/skin/Toolbar@2x.png);
     --panel-arrow-vertical: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjIwIiBoZWlnaHQ9IjEwIj4gIDxwYXRoIGQ9Ik0gMCwxMCBMIDEwLDAgMjAsMTAgeiIgZmlsbD0iIzkxOTE5MSIvPiAgPHBhdGggZD0iTSAxLDEwIEwgMTAsMSAxOSwxMCB6IiBmaWxsPSIjRjJGMkYyIi8+PC9zdmc+);
-    --menupanel-images: url(chrome://browser/skin/menuPanel.png);
-    --menupanel-images-2x: url(chrome://browser/skin/menuPanel@2x.png);
-    --menupanel-small-images: url(chrome://browser/skin/menuPanel-small.png);
-    --menupanel-small-images-2x: url(chrome://browser/skin/menuPanel-small@2x.png);
+    --menupanel-images: url(chrome://browser/skin/menuPanel.svg);
+    --menupanel-small-images: url(chrome://browser/skin/menuPanel-small.svg);
     --pocket-menupanel-image: url(chrome://pocket/skin/menuPanel.png);
-    --pocket-menupanel-image-2x: url(chrome://pocket/skin/menuPanel@2x.png);
+	--pocket-menupanel-image-2x: url(chrome://pocket/skin/menuPanel@2x.png);
     --panelUI-fxa-icon: url(chrome://browser/skin/sync-horizontalbar.png);
     --panelUI-fxa-icon-2x: url(chrome://browser/skin/sync-horizontalbar@2x.png);
     --panelUI-customize-icon: url(chrome://browser/skin/menuPanel-customize.png);
